# sshell

./: Cargo.toml
docs/: detailed-design.md  proposal.md  tasks.md
docs/manual/: sshell-mvp-acceptance.md
docs/superpowers/plans/: 2026-06-07-sshell-mvp.md
docs/superpowers/specs/: 2026-06-07-sshell-mvp-design.md
src/: app.rs  cli.rs  connection_spec.rs  error.rs  events.rs  input.rs  lib.rs  main.rs  session_manager.rs
src/ssh/: client.rs  mod.rs  runtime.rs
src/terminal/: engine.rs
src/tui/: view.rs
tests/: app_smoke.rs  cli_parse.rs  help_smoke.rs  input_prefix.rs  session_manager.rs  ssh_runtime.rs  terminal_engine.rs
