[package]
name = "sshell"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
crossterm = "0.27"
vt100 = "0.15"
ratatui = "0.28"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
